--- a/CrazyTanks/CrazyTanks/CrazyTanks.vcxproj.filters
+++ b/CrazyTanks/CrazyTanks/CrazyTanks.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="tank.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="CrazyTanks.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="tank.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
